--- a/formdrivertables.ui
+++ b/formdrivertables.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>449</width>
     <height>300</height>
    </rect>
   </property>
@@ -74,6 +74,20 @@
      </item>
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_4">
+       <item>
+        <widget class="QPushButton" name="pbAddTag">
+         <property name="text">
+          <string>Добавить тэг</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pbRemoveTag">
+         <property name="text">
+          <string>Удалить тэг</string>
+         </property>
+        </widget>
+       </item>
        <item>
         <widget class="QPushButton" name="pbTagContextSubmitAll">
          <property name="text">
