--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -104,6 +104,19 @@
          </item>
         </layout>
        </widget>
+       <widget class="QPushButton" name="pbCreateJson">
+        <property name="geometry">
+         <rect>
+          <x>520</x>
+          <y>100</y>
+          <width>131</width>
+          <height>41</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Создать json</string>
+        </property>
+       </widget>
        <widget class="QWidget" name="">
         <property name="geometry">
          <rect>
